advise-reporter/base/deploymentconfig.yaml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: advise-reporter-consumer
spec:
  replicas: 1
  selector:
    service: advise-reporter-consumer
  template:
    metadata:
      labels:
        service: advise-reporter-consumer
    spec:
      containers:
        - name: advise-reporter-consumer
          image: advise-reporter
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - name: secrets
              mountPath: /mnt/secrets
              readOnly: true
      volumes:
        - name: secrets
          secret:
            secretName: "kafka"
            items:
              - key: kafka_ca.crt
                path: kafka_ca.crt
  test: false
