advise-reporter/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: advise-reporter-consumer
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    service: advise-reporter-consumer
    app.kubernetes.io/name: thoth
    app.kubernetes.io/component: advise-reporter
    app.kubernetes.io/managed-by: aicoe-thoth-devops-argocd
