advise-reporter/base/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: advise-reporter-consumer
spec:
  to:
    kind: Service
    name: advise-reporter-consumer
